DSP-24286 Removes Java 11 deprecated JVM options
Spark JobServer fails to start in Java 11 due to deprecated
-XX:+PrintGCTimeStamps option.
Removes options that are no longer used and cause warnings:
 * -XX:MaxPermSize
 * -XX:+UseConcMarkSweepGC
Replaces -Xloggc by -Xlog:gc to remove Java 11 warning.